# kuberef

./: .gitignore  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  test_json_output.py
.github/: pull_request_template.md
.github/workflows/: ci.yaml  codeql.yml
examples/: test-app.yaml
my-helm-chart/: Chart.yaml
my-helm-chart/templates/: deployment.yaml
src/kuberef/: __main__.py  formatters.py  main.py  watcher.py
test-manifests/: complex-pod.yaml  configmap-test.yaml  malformed-pod.yaml  my-deploy.yaml
tests/: test_configmap.py  test_parser.py  test_watch_exit.py  test_watcher.py
